# omnisensor

./: Cargo.toml  Makefile
aux/: omnisensor.service
src/: adc.rs  backends.rs  dbus_helpers.rs  devices.rs  external.rs  fan.rs  gpio.rs  hwmon.rs  i2c.rs  main.rs  peci.rs  powerstate.rs  sensor.rs  sysfs.rs  threshold.rs  types.rs
src/backends/: adc.rs  external.rs  fan.rs  hwmon.rs  peci.rs
src/devices/: i2c.rs  peci.rs
