[package]
name = "bmcsensors"
description = "Foolish dbus-sensors reimplementation"
homepage = "https://gerrit.openbmc.org/c/openbmc/dbus-sensors/+/58783/comments/6e32db08_abb5c2d4"
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.22", features = ["full"] }
dbus = "0.9"
dbus-tokio = "0.7"
dbus-crossroads = "0.5"
futures = "0.3"
gpiocdev = "0.4"
glob = "0.3"
phf = { version = "0.11", features = ["macros"] }
strum = "0.24"
strum_macros = "0.24"
replace_with = "0.1"
